--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,10 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/program--/universe
 	shallow = true
 	branch = HEAD
+[submodule "fipio"]
+	path = fipio
+	url = https://github.com/program--/fipio
+	shallow = true
+	registered = true
