--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,13 @@
 	url = https://github.com/program--/fipio
 	shallow = true
 	registered = true
+[submodule "logdec"]
+	path = logdec
+	url = https://github.com/program--/logdec
+	shallow = true
+	registered = true
+[submodule "HSClientR"]
+	path = HSClientR
+	url = https://github.com/program--/hsclientr
+	shallow = true
+	registered = true
